--- a/content/themes/elements/sass/modules/form/_form.scss
+++ b/content/themes/elements/sass/modules/form/_form.scss
@@ -76,6 +76,14 @@ div.wpcf7-response-output{
         width: 100%;
         margin-left: 0;
       }
+      
+      &.form-submit{
+        input[type="submit"]{
+          display: block;
+          margin: auto;
+          margin-top: 30px;
+        }
+      }
     }
   }
 }
